# bare-metal-manager-core

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile-package.toml  Makefile.toml  README.md  STYLE_GUIDE.md  devspace.yaml  skaffold.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-boot-artifacts.yml  ci.yaml  docker-build.yml  fern-docs-ci.yml  fern-docs-preview-build.yml  fern-docs-preview-comment.yml  promotion.yaml  publish-fern-docs.yml  release.yaml  rest-build-binaries.yml  rest-build-push-docker.yml  rest-build-push-service.yml  rest-ci.yml  rest-helm-workflows.yml  rest-lint-and-test.yml  rest-prepare-build-info.yml  stale-check.yml  sync-openapi.yml
bluefield/: Makefile.toml
book/src/: README.md  SUMMARY.md  codebase_overview.md
cli/pkg/: app.go  auth.go  commands.go
crates/admin-cli/: Cargo.toml  DEVELOPMENT.md
crates/agent/: Cargo.toml  build.rs
crates/api/: Cargo.toml
crates/api-core/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-integration-tests/: Cargo.toml
crates/api-model/: Cargo.toml
crates/api-test-helper/: Cargo.toml
crates/authn/: Cargo.toml
crates/bmc-explorer/: Cargo.toml
crates/bmc-explorer-cli/: Cargo.toml
crates/bmc-explorer-cli/src/: main.rs
crates/bmc-mock/: Cargo.toml
crates/bmc-proxy/: Cargo.toml  README.md  build.rs
crates/bms-dsx-exchange/: Cargo.toml
crates/certs/: Cargo.toml
crates/component-manager/: Cargo.toml
crates/dhcp/: Cargo.toml
crates/dhcp-server/: Cargo.toml
crates/dns/: Cargo.toml
crates/dns/src/: config.rs  lib.rs  main.rs
crates/dns/src/legacy/: mod.rs
crates/dpa-manager/: Cargo.toml
crates/dpa-manager/src/: errors.rs  lib.rs  metrics.rs
crates/dpa-manager/src/card_handler/: astra.rs  svpc.rs
crates/dpf/: Cargo.toml  build.rs
crates/dpf-beta/: Cargo.toml
crates/dpu-otel-agent/: Cargo.toml
crates/dpu-otel-agent/src/: lib.rs
crates/dpu-remediation/: Cargo.toml
crates/fmds/: Cargo.toml
crates/fmds/src/: cfg.rs  grpc_server.rs  http_request_metrics.rs  identity_signer.rs  lib.rs  main.rs  nic_init.rs  phone_home.rs
crates/ipmi/: Cargo.toml
crates/ipmi/src/: bmc_mock.rs  lib.rs  metrics.rs  test_support.rs  tool.rs
crates/libmlx/: Cargo.toml  README.md  build.rs
crates/libmlx/databases/: mlx-generic.yaml
crates/libmlx/src/: lib.rs
crates/libmlx/src/device/: discovery.rs  filters.rs  info.rs  mlxconfig.out  mod.rs  proto.rs  report.rs
crates/libmlx/src/device/cmd/: mod.rs
crates/libmlx/src/device/cmd/device/: args.rs  cmds.rs  mod.rs
crates/libmlx/src/embedded/: mod.rs
crates/libmlx/src/embedded/cmd/: args.rs  cmds.rs  mod.rs
crates/libmlx/src/firmware/: config.rs  credentials.rs  error.rs  flasher.rs  mod.rs  reset.rs  result.rs  source.rs
crates/libmlx/src/lockdown/: error.rs  lockdown.rs  mod.rs  runner.rs
crates/libmlx/src/lockdown/cmd/: args.rs  cmds.rs  mod.rs
crates/libmlx/src/profile/: error.rs  mod.rs  profile.rs  serialization.rs
crates/libmlx/src/registry/: mod.rs  registries.rs
crates/libmlx/src/runner/: applier.rs  command_builder.rs  error.rs  exec_options.rs  executor.rs  json_parser.rs  mod.rs  result_types.rs  runner.rs  traits.rs
crates/libmlx/src/variables/: mod.rs  registry.rs  spec.rs  value.rs  variable.rs
crates/libmlx/tests/: device.rs  firmware.rs  lockdown.rs  profile.rs  runner.rs  variables.rs
crates/libmlx/tests/device/: test_discovery.rs  test_filters.rs
crates/libmlx/tests/firmware/: test_config.rs  test_credentials.rs  test_source.rs
crates/libmlx/tests/lockdown/: test_cmd.rs  test_error.rs  test_lockdown.rs  test_runner.rs
crates/libmlx/tests/profile/: test_serialization.rs
crates/libmlx/tests/runner/: command_builder_tests.rs  exec_options_tests.rs  executor_tests.rs  json_parser_tests.rs  result_types_tests.rs  runner_integration_tests.rs  traits_tests.rs
crates/libmlx/tests/runner/common/: mod.rs
crates/libmlx/tests/variables/: test_registry.rs  test_spec.rs  test_value.rs  test_variable.rs
crates/machine-a-tron/: Cargo.toml
crates/machine-a-tron/config/: mac.toml  mat.toml
crates/machine-a-tron/src/: api_client.rs  api_throttler.rs  bmc_mock_wrapper.rs  config.rs  control_router.rs  dhcp_wrapper.rs  dpu_machine.rs  host_machine.rs  machine_a_tron.rs  machine_fsm.rs  machine_state_machine.rs  machine_utils.rs  main.rs  mock_ssh_server.rs  subnet.rs  tui.rs  vpc.rs
crates/metrics-endpoint/: Cargo.toml
crates/metrics-endpoint/src/: lib.rs
crates/nvlink-manager/: Cargo.toml
crates/nvlink-manager/src/: config.rs  errors.rs  lib.rs  metrics.rs  switch_cert_monitor.rs
crates/preingestion-manager/: Cargo.toml
crates/preingestion-manager/src/: bfb_rshim_copier.rs  errors.rs  lib.rs  metrics.rs
crates/preingestion-manager/src/fixtures/: test_metrics_collector.txt
crates/preingestion-manager/tests/integration/: host_bmc_firmware.rs
crates/redfish/: Cargo.toml
crates/redfish/src/: lib.rs
crates/redfish/src/libredfish/: auth.rs  error.rs  implementation.rs  instrumented.rs  mod.rs  test_support.rs
crates/redfish/src/nv_redfish/: mod.rs
crates/redfish/tests/: service_root_cache_poisoning.rs
crates/rpc/: build.rs  (+1 more)
crates/utils/: Cargo.toml
crates/utils/src/: cmd.rs  config.rs  host_port_pair.rs  lib.rs  managed_host_display.rs  managed_loop.rs  none_if_empty.rs  periodic_timer.rs
crates/utils/src/test_support/: mod.rs  test_meter.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: error_message_case.rs  main.rs  workspace_deps.rs
deploy/: README.md
docs/: .rumdl.toml  README.md  codebase_overview.md  development.md  faq.md  glossary.md  index.yml  release-notes.md
fern/: docs.yml  generators.yml
helm/: .helmignore  Chart.yaml  README.md  values.yaml
helm-prereqs/: README.md  clean.sh  preflight.sh  setup.sh  values.yaml
openapi/: spec.yaml
pxe/: Makefile.toml  wget_deb_urls
rest-api/: .coderabbit.yaml  .gitignore  .golangci.yml  .pre-commit-config.yaml  .revive.toml  AGENTS.md  CHANGELOG.md  Makefile  README.md  VERSION  go.mod  go.sum
scripts/: check-aarch64-pagesize.sh  setup-build-host.sh
(+3791 files in other folders)
