#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-dns"
version = "0.0.1"
description = "Carbide is bare metal provisioning system with auto-discovery and API based machine manipulation"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "carbide-dns"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
  "json",
], workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { workspace = true }
trust-dns-server = { workspace = true }
trust-dns-resolver = { workspace = true }

# [local-dependencies]
dns-record = { path = "../dns-record" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
local-ip-address = { workspace = true }
carbide-tls = { path = "../tls" }
carbide-version = { path = "../version" }
carbide-rpc = { path = "../rpc" }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
