#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-libmlx"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Consolidated Mellanox NIC configuration, firmware, and device management library."

[lib]
name = "libmlx"

[[bin]]
name = "mlxconfig-device"
path = "src/bin/mlxconfig-device.rs"

[[bin]]
name = "mlxconfig-embedded"
path = "src/bin/mlxconfig-embedded.rs"

[dependencies]
# Serialization
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# CLI
clap = { features = ["derive"], workspace = true }
prettytable-rs = { workspace = true }

# Async / networking
tokio = { features = ["full"], workspace = true }
reqwest = { features = ["rustls-tls"], workspace = true }
async-ssh2-tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }

# XML / protobuf
quick-xml = { features = ["serialize"], workspace = true }
prost-types = { workspace = true }

# Utility
regex = { workspace = true }
chrono = { features = ["serde"], workspace = true }
hostname = { workspace = true }
mac_address = { features = ["serde"], workspace = true }
once_cell = { workspace = true }
uuid = { features = ["v4"], workspace = true }
backon = { workspace = true }
wait-timeout = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }

# Internal
carbide-rpc = { path = "../rpc" }
carbide-uuid = { path = "../uuid" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tokio-test = { workspace = true }
