#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "metrics-endpoint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
hyper = { workspace = true }
hyper-util = { features = [
    "server",
    "http1",
    "http2",
    "tokio",
], workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

prometheus = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = [
    "semconv_experimental",
] }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true, features = [
    "spec_unstable_metrics_views",
] }

[lints]
workspace = true
