[package]
name = "carbide-nvlink-manager"
version = "0.0.1"
edition.workspace = true
description = "Carbide NVLink Manager"
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_nvlink_manager"

[features]
default = []
test-support = []

[dependencies]
carbide-api-db = { path = "../api-db" }
carbide-api-model = { path = "../api-model" }
carbide-secrets = { path = "../secrets" }
carbide-utils = { path = "../utils" }
carbide-uuid = { path = "../uuid" }
config-version = { path = "../config-version" }
libnmxc = { path = "../libnmxc" }
libnmxm = { path = "../libnmxm" }

# these are alphabetized
async-trait = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { features = ["v4", "serde"], workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
carbide-utils = { path = "../utils", features = ["test-support"] }
rcgen = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
