[package]
name = "carbide-preingestion-manager"
version = "0.0.1"
edition.workspace = true
description = "Carbide Pre-ingestion Manager"
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_preingestion_manager"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[dependencies]
bmc-vendor = { path = "../bmc-vendor" }
carbide-api-db = { path = "../api-db" }
carbide-api-model = { path = "../api-model" }
carbide-firmware = { path = "../firmware" }
carbide-instrument = { path = "../instrument" }
carbide-redfish = { path = "../redfish" }
carbide-secrets = { path = "../secrets" }
carbide-ssh = { path = "../ssh" }
carbide-utils = { path = "../utils" }

# these are alphabetized
chrono = { workspace = true }
futures-util = { workspace = true }
libredfish = { workspace = true }
opentelemetry = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
version-compare = { workspace = true }

[dev-dependencies]
carbide-firmware = { path = "../firmware", features = ["test-support"] }
carbide-instrument = { path = "../instrument", features = ["test-support"] }
carbide-test-harness = { path = "../test-harness" }
carbide-test-support = { path = "../test-support" }
carbide-uuid = { path = "../uuid" }
prometheus-text-parser = { path = "../prometheus-text-parser" }
tempfile = { workspace = true }

[lints]
workspace = true
