[package]
name = "carbide-redfish"
version = "0.0.1"
edition.workspace = true
description = "Carbide Redfish"
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_redfish"

[features]
default = []
test-support = ["carbide-secrets/test-support"]

[dependencies]
bmc-vendor = { path = "../bmc-vendor" }
carbide-api-model = { path = "../api-model", default-features = false }
carbide-instrument = { path = "../instrument" }
carbide-secrets = { path = "../secrets" }
carbide-utils = { path = "../utils", default-features = false }
# state-controller is required only to convert redfish errors to
# controller external errors. We can make it more tight if move
# StateHandlerError to separate crate.
state-controller = { path = "../state-controller", default-features = false }

#these are alphabetized
arc-swap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
nv-redfish = { workspace = true, features = [
  "bmc-http",
  "oem-hpe",
  "session-service",
] }
reqwest = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
bmc-mock = { path = "../bmc-mock" }
carbide-instrument = { path = "../instrument", features = ["test-support"] }
nv-redfish = { workspace = true, features = ["chassis"] }
rustls = { workspace = true }
