#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-utils"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sqlx = ["carbide-network/sqlx", "dep:sqlx"]
test-support = [
  "dep:opentelemetry_sdk",
  "dep:prometheus",
  "dep:opentelemetry-prometheus",
  "dep:rcgen",
]

[dependencies]
carbide-instrument = { path = "../instrument" }
carbide-network = { path = "../network" }

byte-unit = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ipnetwork = { workspace = true }
mac_address = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
carbide-instrument = { path = "../instrument", features = ["test-support"] }
carbide-test-support = { path = "../test-support" }

[lints]
workspace = true
