#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
toml_edit = { workspace = true }
walkdir = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true }
cargo_metadata = { workspace = true }
similar = { workspace = true }
version-compare = { workspace = true }
syn = { workspace = true, features = ["full", "visit", "parsing", "extra-traits", "clone-impls"] }
proc-macro2 = { workspace = true, features = ["span-locations"] }

chrono = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
] }
tokio = { workspace = true }

[lints]
workspace = true
